# obfuscation-metrics

./: .gitignore  02a_kolmogorov_complexity.md  03a_control_flow_and_data_obfuscation.md  03c_whitebox_cryptography.md  README.md
crackmes/android/01_license_check_1/: validate
crackmes/android/01_license_key_validation/a_unobfuscated/: validate
crackmes/android/02_license_check_2/: validate
sample_code/oath-totp/: Makefile  hmac.h
testprograms/oath-totp/: Makefile  gc-gnulib.c  gc.h  getsize.sh  hmac-sha1.c  hotp.c  mini-totp  mini-totp.c  mini-totp.o.bz2  oath.h  sha1.c  sha1.h  test.c  totp.c
tools/: obfm.py
tools/llvm-bitcode-metrics/: BitcodeMetrics.cpp  CMakeLists.txt  README.rst
writeups/: 02a_kolmogorov_complexity.md  02b_normalized_compression_distance.md  03a_control_flow_and_data_obfuscation.md
